# CppCoverageTool

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.ps1  rebuild.bat  功能清单.md
CoverageTool/: CoverageResource.rc  CoverageTool.cpp  CoverageTool.h  main.cpp  resource.h
